Создали пакеты exception и handler, создали несколько классы и доработали другие классы и интерфейс